# web3-signals-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  IMPROVEMENTS.md  PROJECT_IDEA.md  README.md  RESEARCH.md  SIGNAL_LOGIC.md  assets.yaml  backtest_baseline.json  claude.md  config.yaml  learned_state.json  pyproject.toml  railway.json  requirements.txt  server.json
agents/: base.py  derivatives.py  exchange_flow.py  market.py  narrative.py  technical.py
api/: __main__.py  dashboard.py  middleware.py  server.py
cli/: README.md  pyproject.toml
cli/src/agentmarketsignal/: __init__.py  __main__.py  cli.py
derivatives_agent/: engine.py
docs/: CONTEXT.md
examples/: README.md  example_agent.py
learning/: evaluation.py  optimizer.py
market_agent/: engine.py
mcp_server/: __main__.py  server.py
narrative_agent/: engine.py
orchestrator/: runner.py
risk/: __init__.py  manager.py
scoring/: config.py  dimensions.py  modifiers.py  pipeline.py  types.py
scripts/: payment_bot.py
shared/: base_agent.py  profile_loader.py  storage.py
signal_fusion/: engine.py  optimizer.py
storage/: db.py
technical_agent/: engine.py
tests/: test_abstain_sweep.py  test_agents.py  test_backtest_integration.py  test_config.py  test_consolidation.py  test_deploy_gate.py  test_dimensions.py  test_drift_detector.py  test_historical_fetcher.py  test_indicator_cleanup.py  test_integration.py  test_learned_params.py  test_learning.py  test_modifiers.py  test_multicollinearity.py  test_pipeline.py  test_pipeline_baseline_weights.py  test_risk_integration.py  test_risk_manager.py  test_risk_metrics.py  test_storage.py  test_types.py  test_walk_forward.py  test_weight_optimizer.py
tools/: abstain_sweep.py  backtest.py  deploy_gate.py  drift_detector.py  fit_scoring.py  historical_fetcher.py  indicators.py  learned_params.py  multicollinearity.py  seed_trades.py  trade_simulator.py  walk_forward.py  weight_optimizer.py
whale_agent/: engine.py
(+10 files in other folders)
