[project]
name = "web3-signals"
version = "1.0.0"
description = "AI-powered crypto signal intelligence — 5 agents, 20 assets, x402 micropayments"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pyyaml==6.0.2",
    "pydantic>=2.0",
    "praw==7.8.1",
    "psycopg2-binary==2.9.10",
    "mcp>=1.26.0",
    "x402[fastapi,evm]==2.2.0",
    "cdp-sdk>=1.39.0",
    "yfinance>=1.2.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
